--- a/nft-minting-app-main (metalamboz)/public/config/theme.css
+++ b/nft-minting-app-main (metalamboz)/public/config/theme.css
@@ -41,3 +41,15 @@
 .flexbox-item-1 {
   padding: 30px;
 }
+
+.form-textbox {
+	width: 100%;
+	height: 3em;
+	padding: .5em 1em;
+	border: .125em solid #95a5a6;
+	border-radius: .25em;
+	font-family: inherit;
+	line-height: 1;
+	outline: none;
+	transition: border-color .15s ease-in-out 0s;
+}
